--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,17 @@
 {
   "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "My Box Office",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "maskable_icon.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
       "src": "logo192.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "maskable"
     },
     {
       "src": "logo512.png",
