--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "icons": [
     {
       "src": "maskable_icon.png",
-      "sizes": "64x64 32x32 24x24 16x16",
+      "sizes": "192x192",
       "type": "image/x-icon"
     },
     {
